Local validations complete for home page and 3DE page

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 
 
     <link rel = "stylesheet" type = "text/css" href = "main.css">
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:300,400|Roboto:300,500" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:300,400" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,500" rel="stylesheet">
 
     <!-- Add icon library -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -36,7 +37,7 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarUniq" aria-controls="navbarUniq" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" aria-label="My Logo" href="#">
           <img src="assets/SVG/Logo.svg" width="45" height="45" class="d-inline-block align-top" alt="">
         </a>
 
@@ -49,7 +50,7 @@
               <a class="nav-link" href="About.html">ABOUT</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="assets/Jackson Hammond - Resume.pdf">RESUME</a>
+              <a class="nav-link" href="assets/Jackson-Hammond_Resume.pdf">RESUME</a>
             </li>
           </ul>
         </div>
@@ -60,7 +61,7 @@
       <div class = "jumbotron jumbotron-fluid d-flex align-items-center" id = "mainJumbotron">
         <div class = "container">
           <div class="col-sm-12" >
-            <h1> <span style="color: #BDBDBD;">Hi there!</span></h1>
+            <h1> <span style="color: #313131;">Hi there!</span></h1>
             <h1><a href="About.html" style="color: #313131;">I'm Jackson.</a></h1>
             <p><span style="color: #673AB7; font-weight: 500;">Digital product designer</span> from Ann Arbor. <br>I want to create better experiences <span style="color: #673AB7; font-weight: 500;">for people.</span></p>
           </div>
@@ -73,7 +74,7 @@
           <div class = "col-lg-4 col-md-6 col-sm-12 ">
             <div class = "thumbnail project-card mx-auto">
               <a href = "projects/3D_Emergency.html">
-                <img src = "assets/Thumbnails/3DE cropped thumbnail.png" alt = "3D Emergency" class = "project-image">
+                <img src = "assets/Thumbnails/3DE_cropped_thumbnail.png" alt = "3D Emergency" class = "project-image">
                 <div class = "caption">
                   <p class="project-name">3D Emergency</p>
                   <p class="project-type">UX Design and Research</p>
@@ -84,43 +85,10 @@
           <div class = "col-lg-4 col-md-6 col-sm-12">
             <div class = "thumbnail project-card mx-auto">
               <a href = "projects/Great_Lakes_Legends.html">
-                <img src = "assets/Thumbnails/great lakes legends.jpg" alt = "Great Lakes Legends" class = "project-image">
+                <img src = "assets/Thumbnails/great_lakes_legends.jpg" alt = "Great Lakes Legends" class = "project-image">
                 <div class = "caption">
                   <p class="project-name">Great Lakes Legends</p>
                   <p class="project-type">Product Design</p>
-                </div>
-              </a>
-            </div>
-          </div>
-          <div class = "col-lg-4 col-md-6 col-sm-12">
-            <div class = "thumbnail project-card mx-auto">
-              <a href = "projects/Exercise_Visualizations.html">
-                <img src = "assets/Thumbnails/workout viz.png" alt = "Sankey Diagram" class = "project-image">
-                <div class = "caption">
-                  <p class="project-name">Exercise Visualizations</p>
-                  <p class="project-type">Data Visualization</p>
-                </div>
-              </a>
-            </div>
-          </div>
-          <div class = "col-lg-4 col-md-6 col-sm-12">
-            <div class = "thumbnail project-card mx-auto">
-              <a href = "projects/MSGC_Consulting.html">
-                <img src = "assets/Thumbnails/MSGC.jpg" alt = "MSGC Consulting" class = "project-image">
-                <div class = "caption">
-                  <p class="project-name">Consulting with the MSGC</p>
-                  <p class="project-type">User Research</p>
-                </div>
-              </a>
-            </div>
-          </div>
-          <div class = "col-lg-4 col-md-6 col-sm-12">
-            <div class = "thumbnail project-card mx-auto">
-              <a href = "projects/Autodesk_Consulting.html">
-                <img src = "assets/Autodesk Consulting/Autodesk logo dark.jpg" alt = "Autodesk Consulting" class = "project-image">
-                <div class = "caption">
-                  <p class="project-name">Consulting with Autodesk</p>
-                  <p class="project-type">User Research and Usability Testing</p>
                 </div>
               </a>
             </div>
@@ -135,9 +103,9 @@
         <h6>Feel free to reach out if you want to connect or just say hi!</h6>
         <a class="footer-email" href="mailto:jbhammon@umich.edu">jbhammon@umich.edu</a>
         <div class="social-links">
-          <a href="https://github.com/jbhammon" target="_blank" class="fa fa-github"></a>
-          <a href="https://medium.com/@malts18" target="_blank" class="fa fa-medium"></a>
-          <a href="https://www.linkedin.com/in/jackson-hammond-b428a481/" target="_blank" class="fa fa-linkedin"></a>
+          <a href="https://github.com/jbhammon" target="_blank" class="fa fa-github" aria-label="My Github account"></a>
+          <a href="https://medium.com/@malts18" target="_blank" class="fa fa-medium" aria-label="My Medium account"></a>
+          <a href="https://www.linkedin.com/in/jackson-hammond-b428a481/" target="_blank" class="fa fa-linkedin" aria-label="My LinkedIn account"></a>
         </div>
         <small class="footer-copyright">Pulled up with Bootstrap 4 &#169; 2019 Jackson Hammond</small>
       </div>
