--- a/projects/3D_Emergency.html
+++ b/projects/3D_Emergency.html
@@ -22,7 +22,8 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 
     <link rel = "stylesheet" type = "text/css" href = "../main.css">
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:300,400|Roboto:300,500" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:300,400" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,500" rel="stylesheet">
 
     <!-- Add icon library -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -39,7 +40,9 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarUniq" aria-controls="navbarUniq" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="navbar-brand" href="../index.html">Jackson Hammond</a>
+        <a class="navbar-brand" aria-label="My Logo" href="#">
+          <img src="../assets/SVG/Logo.svg" width="45" height="45" class="d-inline-block align-top" alt="">
+        </a>
 
         <div id="navbarUniq" class="collapse navbar-collapse">
           <ul class="nav navbar-nav ml-auto" >
@@ -50,7 +53,7 @@
               <a class="nav-link" href="../About.html">ABOUT</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../assets/Jackson Hammond - Resume.pdf">RESUME</a>
+              <a class="nav-link" href="../assets/Jackson_Hammond_Resume.pdf">RESUME</a>
             </li>
           </ul>
         </div>
@@ -82,7 +85,7 @@
         <div class="project-page-card">
           <div class = "row justify-content-center">
             <div class="col-lg-10">
-              <img src="../assets/3D Emergency/mobile screen mockup collage.png" class="img-fluid">
+              <img src="../assets/3D_Emergency/mobile_screen_mockup_collage.png" class="img-fluid" alt="Screenshots on generic mockups">
             </div>
           </div>
         </div>
@@ -118,7 +121,7 @@
               <p>I re-imagined the interaction between 911 callers and dispatchers when callers need to describe their specific location within a building. I did this by adding a new tool to caller's physical environments, QR codes, and designed a solution to integrate them with the current process of calling 911. I created prototypes to model how the new interactions would happen on both a caller's smartphone and the monitors in front of 911 dispatchers.</p>
             </div>
             <div class="col-sm-10">
-              <img src="../assets/3D Emergency/QR code poster mock up.png" class="img-fluid">
+              <img src="../assets/3D_Emergency/QR_code_poster_mock_up.png" class="img-fluid" alt="QR Code poster mockup">
             </div>
           </div>
         </div>
@@ -132,7 +135,7 @@
         <div class="project-page-card">
           <div class="row justify-content-center align-items-center">
             <div class="col-sm-5 mb-5">
-              <img src="../assets/3D Emergency/QR Code Scan.gif" class="float-right" style="width:80%;">
+              <img src="../assets/3D_Emergency/QR_Code_Scan.gif" class="float-right" style="width:80%;" alt="QR Code scanning demo">
             </div>
             <div class="col-sm-5 mb-5">
               <h5>QR Code Integration</h5>
@@ -146,7 +149,7 @@
               <p>Callers would be able to see their location on an interactive floorplan to help with taking instructions from the dispatchers.</p>
             </div>
             <div class="col-sm-5 mb-5">
-              <img src="../assets/3D Emergency/Phone View Map.gif" style="width:80%">
+              <img src="../assets/3D_Emergency/Phone_View_Map.gif" style="width:80%" alt="Interactive floorplan demo">
             </div>
           </div>
 
@@ -156,7 +159,7 @@
               <p>Dispatchers would also be able to see where a caller is on an interactive floorplan. In addition, they would be presented with more information than the caller, such as where first responders should enter a building. This information could be passed down the workflow to be presented to the first responders themselves.</p>
             </div>
             <div class="col-md-10 col-sm-12">
-              <img src="../assets/3D Emergency/Dispatch View Map.gif" class="float-right" style="width:100%;">
+              <img src="../assets/3D_Emergency/Dispatch_View_Map.gif" class="float-right" style="width:100%;" alt="Dispatcher map demo gif">
             </div>
           </div>
 
@@ -178,16 +181,16 @@
             <div class="col-sm-10 mb-5">
               <div class="gallery-two-column">
                 <div class="mb-3">
-                  <img src="../assets/3D Emergency/Storyboard 1.jpg" class="img-fluid">
+                  <img src="../assets/3D_Emergency/Storyboard_1.jpg" class="img-fluid" alt="Storyboard version 1">
                 </div>
                 <div class="mb-3">
-                  <img src="../assets/3D Emergency/Storyboard 2.jpg" class="img-fluid">
+                  <img src="../assets/3D_Emergency/Storyboard_2.jpg" class="img-fluid" alt="Storyboard version 2">
                 </div>
                 <div class="mb-3">
-                  <img src="../assets/3D Emergency/Storyboard 4.jpg" class="img-fluid">
+                  <img src="../assets/3D_Emergency/Storyboard_4.jpg" class="img-fluid" alt="Storyboard version 3">
                 </div>
                 <div class="mb-3">
-                  <img src="../assets/3D Emergency/Storyboard 5.jpg" class="img-fluid">
+                  <img src="../assets/3D_Emergency/Storyboard_5.jpg" class="img-fluid" alt="Storyboard version 4">
                 </div>
               </div>
             </div>
@@ -203,22 +206,22 @@
 
           <div class="row justify-content-center">
             <div class="col-lg-5 mb-5">
-              <img src="../assets/3D Emergency/Mid call scan sketch.jpg" class="float-right" style="width:100%">
+              <img src="../assets/3D_Emergency/Mid_all_scan_sketch.jpg" class="float-right" style="width:100%" alt="Detailed sketch of call screen">
             </div>
             <div class="col-lg-5 mb-5">
-              <img src="../assets/3D Emergency/Sketches from in class pitch.jpg" style="width:100%">
+              <img src="../assets/3D_Emergency/Sketches_from_in_class_pitch.jpg" style="width:100%" alt="Detailed sketch of usage demo">
             </div>
           </div>
 
           <div class="row justify-content-center">
             <div class="col-sm-10 mb-5">
-              <p>I created some personas and story maps to help further understand the details an emergency system like this would need. I drew inspiration for the persona design from <a href="https://compose.ly/strategy/user-persona-guide/" target="_blank">Compose.ly<a/>, and created the story maps with <a href="https://cardboardit.com/" target="_blank">Cardboard</a>.</p>
+              <p>I created some personas and story maps to help further understand the details an emergency system like this would need. I drew inspiration for the persona design from <a href="https://compose.ly/strategy/user-persona-guide/" target="_blank">Compose.ly</a>, and created the story maps with <a href="https://cardboardit.com/" target="_blank">Cardboard</a>.</p>
             </div>
           </div>
 
           <div class="row justify-content-center align-items-center">
             <div class="col-md-7 col-sm-12 mb-5">
-              <img src="../assets/3D Emergency/Personas 1.png" class="float-right" style="width:100%;">
+              <img src="../assets/3D_Emergency/Personas_1.png" class="float-right" style="width:100%;" alt="Persona 1">
             </div>
             <div class="col-md-3 col-sm-12 mb-5">
               <h5>Primary Persona</h5>
@@ -232,7 +235,7 @@
               <p>Vince is 911 dispatcher in a large American city. He frequently needs to find out where a caller is inside of large buildings.</p>
             </div>
             <div class="col-md-7 col-sm-12 mb-5">
-              <img src="../assets/3D Emergency/Personas 4.png" style="width:80%">
+              <img src="../assets/3D_Emergency/Personas_4.png" style="width:80%" alt="Persona 2">
             </div>
           </div>
 
@@ -243,16 +246,16 @@
           </div>
           <div class="row justify-content-center">
             <div class="col-md-5 col-sm-12">
-              <img src="../assets/3D Emergency/Slide10.PNG" style="width:100%">
+              <img src="../assets/3D_Emergency/Slide10.PNG" style="width:100%" alt="Feature analysis 1">
             </div>
             <div class="col-md-5 col-sm-12">
-              <img src="../assets/3D Emergency/Slide11.PNG" style="width:100%">
+              <img src="../assets/3D_Emergency/Slide11.PNG" style="width:100%" alt="Feature analysis 2">
             </div>
             <div class="col-md-5 col-sm-12 mb-5">
-              <img src="../assets/3D Emergency/Slide12.PNG" style="width:100%">
+              <img src="../assets/3D_Emergency/Slide12.PNG" style="width:100%" alt="Feature analysis 3">
             </div>
             <div class="col-md-5 col-sm-12 mb-5">
-              <img src="../assets/3D Emergency/Slide13.PNG" style="width:100%">
+              <img src="../assets/3D_Emergency/Slide13.PNG" style="width:100%" alt="Feature analysis">
             </div>
           </div>
           <div class="row justify-content-center">
@@ -262,7 +265,7 @@
                 <li>Scanning a poster of a QR code once a 911 call has been placed</li>
                 <li>A button on the call screen will take the user to their camera app to scan the poster</li>
                 <li>The new location info will be added to the call screen after scanning without showing delivery receipts</li>
-              <br>
+              </ul>
             </div>
           </div>
         </div>
@@ -307,9 +310,9 @@
         <h6>Feel free to reach out if you want to connect or just say hi!</h6>
         <a class="footer-email" href="mailto:jbhammon@umich.edu">jbhammon@umich.edu</a>
         <div class="social-links">
-          <a href="https://github.com/jbhammon" target="_blank" class="fa fa-github"></a>
-          <a href="https://medium.com/@malts18" target="_blank" class="fa fa-medium"></a>
-          <a href="https://www.linkedin.com/in/jackson-hammond-b428a481/" target="_blank" class="fa fa-linkedin"></a>
+          <a href="https://github.com/jbhammon" target="_blank" class="fa fa-github" aria-label="My Github account"></a>
+          <a href="https://medium.com/@malts18" target="_blank" class="fa fa-medium" aria-label="My Medium account"></a>
+          <a href="https://www.linkedin.com/in/jackson-hammond-b428a481/" target="_blank" class="fa fa-linkedin" aria-label="My LinkedIn account"></a>
         </div>
         <small class="footer-copyright">Pulled up with Bootstrap 4 &#169; 2019 Jackson Hammond</small>
       </div>
