GLL and about page local accessibility checks fixed

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <a class="navbar-brand" aria-label="My Logo" href="#">
-          <img src="assets/SVG/Logo.svg" width="45" height="45" class="d-inline-block align-top" alt="">
+          <img src="assets/SVG/Logo.svg" width="45" height="45" class="d-inline-block align-top" alt="My Logo">
         </a>
 
         <div id="navbarUniq" class="collapse navbar-collapse">
@@ -50,7 +50,7 @@
               <a class="nav-link" href="About.html">ABOUT</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="assets/Jackson-Hammond_Resume.pdf">RESUME</a>
+              <a class="nav-link" href="assets/Jackson_Hammond_Resume.pdf">RESUME</a>
             </li>
           </ul>
         </div>
