--- a/projects/3D_Emergency.html
+++ b/projects/3D_Emergency.html
@@ -40,8 +40,8 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarUniq" aria-controls="navbarUniq" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="navbar-brand" aria-label="My Logo" href="#">
-          <img src="../assets/SVG/Logo.svg" width="45" height="45" class="d-inline-block align-top" alt="">
+        <a class="navbar-brand" aria-label="My Logo" href="../index.html">
+          <img src="../assets/SVG/Logo.svg" width="45" height="45" class="d-inline-block align-top" alt="My Logo">
         </a>
 
         <div id="navbarUniq" class="collapse navbar-collapse">
