--- a/projects/Great_Lakes_Legends.html
+++ b/projects/Great_Lakes_Legends.html
@@ -22,7 +22,8 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 
     <link rel = "stylesheet" type = "text/css" href = "../main.css">
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:300,400|Roboto:300,500" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,500" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:300,400" rel="stylesheet">
 
     <!-- Add icon library -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -39,7 +40,9 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarUniq" aria-controls="navbarUniq" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="navbar-brand" href="../index.html">Jackson Hammond</a>
+        <a class="navbar-brand" aria-label="My Logo" href="../index.html">
+          <img src="../assets/SVG/Logo.svg" width="45" height="45" class="d-inline-block align-top" alt="My Logo">
+        </a>
 
         <div id="navbarUniq" class="collapse navbar-collapse">
           <ul class="nav navbar-nav ml-auto" >
@@ -50,7 +53,7 @@
               <a class="nav-link" href="../About.html">ABOUT</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../assets/Jackson Hammond - Resume.pdf">RESUME</a>
+              <a class="nav-link" href="../assets/Jackson_Hammond_Resume.pdf">RESUME</a>
             </li>
           </ul>
         </div>
@@ -107,7 +110,7 @@
           <p>My group and I prototyped a tool that uses augmented reality to encourage people to witness the beautiful Great Lakes landscapes for themselves. We wanted to create a way for users to experience the stories the Library can tell and provide a way for them to add on their own personal stories for others. At the end of the Design Jam the <span style="color: #673AB7; font-weight: 500;">stakeholders voted our prototype the winner!</span></p>
         </div>
         <div class="col-lg-5 col-sm-12">
-          <img src="../assets/Great Lakes Legends/group photo.jpg" style="width: 100%">
+          <img src="../assets/Great_Lakes_Legends/group_photo.jpg" style="width: 100%" alt="Workshop group photo">
         </div>
       </div>
 
@@ -131,7 +134,7 @@
           </p>
         </div>
         <div class="col-md-5 col-sm-12 mb-5">
-          <img src="../assets/Great Lakes Legends/hmw.jpg" style="width: 100%">
+          <img src="../assets/Great_Lakes_Legends/hmw.jpg" style="width: 100%" alt="How might we questions">
         </div>
       </div>
       <div class="row justify-content-center">
@@ -143,10 +146,10 @@
       </div>
       <div class="row justify-content-center">
         <div class="col-lg-5 col-sm-6 col-xs-12 mb-5">
-          <img src="../assets/Great Lakes Legends/hmw winner.jpg" style="width: 100%">
+          <img src="../assets/Great_Lakes_Legends/hmw_winner.jpg" style="width: 100%" alt="The how might we question we chose">
         </div>
         <div class="col-lg-5 col-sm-6 col-xs-12 mb-5">
-          <img src="../assets/Great Lakes Legends/idea groupings.jpg" style="width: 100%">
+          <img src="../assets/Great_Lakes_Legends/idea_groupings.jpg" style="width: 100%" alt="Grouping the sticky notes of ideas together">
         </div>
       </div>
       <div class="row justify-content-center">
@@ -158,10 +161,10 @@
       </div>
       <div class="row justify-content-center">
         <div class="col-lg-5 col-sm-12">
-          <img src="../assets/Great Lakes Legends/initial wireframes.jpg" style="width: 100%">
+          <img src="../assets/Great_Lakes_Legends/initial_wireframes.jpg" style="width: 100%" alt="Our initial wireframes">
         </div>
         <div class="col-lg-5 col-sm-12">
-          <img src="../assets/Great Lakes Legends/final wireframes.jpg" style="width: 100%">
+          <img src="../assets/Great_Lakes_Legends/final_wireframes.jpg" style="width: 100%" alt="Our final wireframes">
         </div>
       </div>
 
@@ -184,7 +187,7 @@
           </p>
         </div>
         <div class="col-md-5 col-sm-12 mb-5">
-          <img src="../assets/Great Lakes Legends/final prototype.jpg" style="width: 100%">
+          <img src="../assets/Great_Lakes_Legends/final_prototype.jpg" style="width: 100%" alt="Our final prototype">
         </div>
       </div>
       <div class="row justify-content-center">
@@ -207,7 +210,7 @@
           </p>
         </div>
         <div class="col-lg-5 col-sm-12">
-          <img src="../assets/Great Lakes Legends/reflection landscape.jpg" style="width: 100%">
+          <img src="../assets/Great_Lakes_Legends/reflection_landscape.jpg" style="width: 100%" alt="Picture of the Great Lakes shore line">
         </div>
       </div>
 
@@ -219,9 +222,9 @@
         <h6>Feel free to reach out if you want to connect or just say hi!</h6>
         <a class="footer-email" href="mailto:jbhammon@umich.edu">jbhammon@umich.edu</a>
         <div class="social-links">
-          <a href="https://github.com/jbhammon" target="_blank" class="fa fa-github"></a>
-          <a href="https://medium.com/@malts18" target="_blank" class="fa fa-medium"></a>
-          <a href="https://www.linkedin.com/in/jackson-hammond-b428a481/" target="_blank" class="fa fa-linkedin"></a>
+          <a href="https://github.com/jbhammon" target="_blank" class="fa fa-github" aria-label="My Github account"></a>
+          <a href="https://medium.com/@malts18" target="_blank" class="fa fa-medium" aria-label="My Medium account"></a>
+          <a href="https://www.linkedin.com/in/jackson-hammond-b428a481/" target="_blank" class="fa fa-linkedin" aria-label="My LinkedIn account"></a>
         </div>
         <small class="footer-copyright">Pulled up with Bootstrap 4 &#169; 2019 Jackson Hammond</small>
       </div>
