--- a/waiver/canvas.html
+++ b/waiver/canvas.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>My Canvas code</title>
 
     <style>
@@ -19,6 +20,7 @@
 
   <body>
     <canvas id="drawingBoard">Please update your browser</canvas>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="main.js"></script>
   </body>
 </html>
