--- a/waiver/canvas.html
+++ b/waiver/canvas.html
@@ -20,6 +20,9 @@
 
   <body>
     <canvas id="drawingBoard">Please update your browser</canvas>
+
+    <input type="color" name="penColor" id="penColor" value="#ff0000">
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="main.js"></script>
   </body>
