--- a/About.html
+++ b/About.html
@@ -17,9 +17,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 
     <link rel = "stylesheet" type = "text/css" href = "main.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:300,400" rel="stylesheet">
@@ -33,31 +30,19 @@
   </head>
   <body>
 
-    <nav class="navbar navbar-expand-sm fixed-top navbar-light navbar-custom">
-      <div class = "container">
-
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarUniq" aria-controls="navbarUniq" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <a class="navbar-brand" aria-label="My Logo" href="index.html">
+    <div class="container">
+      <div class="myNavBar" id="myTopnav">
+        <a class="navbar-brand" aria-label="My Logo" href="#">
           <img src="assets/SVG/Logo.svg" width="45" height="45" class="d-inline-block align-top" alt="My Logo">
         </a>
-
-        <div id="navbarUniq" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav ml-auto" >
-            <li class="nav-item">
-              <a class="nav-link" href="index.html">WORK</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="About.html">ABOUT</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="assets/Jackson_Hammond_Resume.pdf">RESUME</a>
-            </li>
-          </ul>
-        </div>
+        <a href="assets/Jackson_Hammond_Resume.pdf">RESUME</a>
+        <a href="About.html" class="active">ABOUT</a>
+        <a href="index.html">WORK</a>
+        <a href="javascript:void(0);" class="icon" onclick="navBarHandling()">
+          <i class="fa fa-bars" style="color:#313131;"></i>
+        </a>
       </div>
-    </nav>
+    </div>
 
     <main role="main">
       <div class = "container" style = "margin-top:100px">
@@ -90,6 +75,12 @@
         <small class="footer-copyright">Pulled up with Bootstrap 4 &#169; 2019 Jackson Hammond</small>
       </div>
     </footer>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+    <!--- My JavaScript --->
+    <script src="myscripts.js"></script>
 
   </body>
 </html>
