--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 
-
     <link rel = "stylesheet" type = "text/css" href = "main.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:300,400" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,500" rel="stylesheet">
@@ -31,31 +30,19 @@
   </head>
   <body>
 
-    <nav class="navbar navbar-expand-sm fixed-top navbar-light navbar-custom">
-      <div class = "container">
-
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarUniq" aria-controls="navbarUniq" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
+    <div class="container">
+      <div class="myNavBar" id="myTopnav">
         <a class="navbar-brand" aria-label="My Logo" href="#">
           <img src="assets/SVG/Logo.svg" width="45" height="45" class="d-inline-block align-top" alt="My Logo">
         </a>
-
-        <div id="navbarUniq" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav ml-auto" >
-            <li class="nav-item">
-              <a class="nav-link" href="index.html">WORK</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="About.html">ABOUT</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="assets/Jackson_Hammond_Resume.pdf">RESUME</a>
-            </li>
-          </ul>
-        </div>
+        <a href="assets/Jackson_Hammond_Resume.pdf">RESUME</a>
+        <a href="About.html">ABOUT</a>
+        <a href="index.html" class="active">WORK</a>
+        <a href="javascript:void(0);" class="icon" onclick="navBarHandling()">
+          <i class="fa fa-bars" style="color:#313131;"></i>
+        </a>
       </div>
-    </nav>
+    </div>
 
     <main role="main">
       <div class = "jumbotron jumbotron-fluid d-flex align-items-center" id = "mainJumbotron">
