--- a/projects/3D_Emergency.html
+++ b/projects/3D_Emergency.html
@@ -34,31 +34,19 @@
 
   <body>
 
-    <nav class="navbar navbar-expand-sm fixed-top navbar-light navbar-custom">
-      <div class = "container">
-
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarUniq" aria-controls="navbarUniq" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
+    <div class="container">
+      <div class="myNavBar" id="myTopnav">
         <a class="navbar-brand" aria-label="My Logo" href="../index.html">
           <img src="../assets/SVG/Logo.svg" width="45" height="45" class="d-inline-block align-top" alt="My Logo">
         </a>
-
-        <div id="navbarUniq" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav ml-auto" >
-            <li class="nav-item">
-              <a class="nav-link" href="../index.html">WORK</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="../About.html">ABOUT</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="../assets/Jackson_Hammond_Resume.pdf">RESUME</a>
-            </li>
-          </ul>
-        </div>
+        <a href="../assets/Jackson_Hammond_Resume.pdf">RESUME</a>
+        <a href="../About.html">ABOUT</a>
+        <a href="../index.html">WORK</a>
+        <a href="javascript:void(0);" class="icon" onclick="navBarHandling()">
+          <i class="fa fa-bars" style="color:#313131;"></i>
+        </a>
       </div>
-    </nav>
+    </div>
 
     <main role="main">
       <div style="position: relative; height: 57.5px"></div>
