--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <a href="assets/Jackson_Hammond_Resume.pdf">RESUME</a>
         <a href="About.html">ABOUT</a>
         <a href="index.html" class="active">WORK</a>
-        <a href="javascript:void(0);" class="icon" onclick="navBarHandling()">
+        <a href="javascript:void(0);" aria-label="Hamburger menu" class="icon" onclick="navBarHandling()">
           <i class="fa fa-bars" style="color:#313131;"></i>
         </a>
       </div>
