--- a/projects/3D_Emergency.html
+++ b/projects/3D_Emergency.html
@@ -42,7 +42,7 @@
         <a href="../assets/Jackson_Hammond_Resume.pdf">RESUME</a>
         <a href="../About.html">ABOUT</a>
         <a href="../index.html">WORK</a>
-        <a href="javascript:void(0);" class="icon" onclick="navBarHandling()">
+        <a href="javascript:void(0);" aria-label="Hamburger menu" class="icon" onclick="navBarHandling()">
           <i class="fa fa-bars" style="color:#313131;"></i>
         </a>
       </div>
