Removing <style> from the html where possible

--- a/projects/3D_Emergency.html
+++ b/projects/3D_Emergency.html
@@ -43,13 +43,13 @@
         <a href="../About.html">ABOUT</a>
         <a href="../index.html">WORK</a>
         <a href="javascript:void(0);" aria-label="Hamburger menu" class="icon" onclick="navBarHandling()">
-          <i class="fa fa-bars" style="color:#313131;"></i>
+          <i class="fa fa-bars"></i>
         </a>
       </div>
     </div>
 
     <main role="main">
-      <div style="position: relative; height: 57.5px"></div>
+      <div class="div-buffer-help"></div>
       <div class="jumbotron project-jumbotron d-flex align-items-center">
         <div class = "container">
           <div class="row justify-content-center">
@@ -57,9 +57,9 @@
               <h1>3D Emergency</h1>
               <p>A solo project focusing on interaction design as a method to improve calling 911 in the United States.</p>
               <p>
-                <span style="color: #673AB7; font-weight: 500;">Role:</span> UX Designer and Researcher<br>
-                <span style="color: #673AB7; font-weight: 500;">Tools:</span> Adobe Illustrator and Adobe XD<br>
-                <span style="color: #673AB7; font-weight: 500;">Timeframe:</span> Sep. 2018 - Dec. 2018
+                <span class="copy-emphasis">Role:</span> UX Designer and Researcher<br>
+                <span class="copy-emphasis">Tools:</span> Adobe Illustrator and Adobe XD<br>
+                <span class="copy-emphasis">Timeframe:</span> Sep. 2018 - Dec. 2018
               </p>
             </div>
           </div>
@@ -123,7 +123,7 @@
         <div class="project-page-card">
           <div class="row justify-content-center align-items-center">
             <div class="col-sm-5 mb-5">
-              <img src="../assets/3D_Emergency/QR_Code_Scan.gif" class="float-right" style="width:80%;" alt="QR Code scanning demo">
+              <img src="../assets/3D_Emergency/QR_Code_Scan.gif" class="float-right image-width-eighty" alt="QR Code scanning demo">
             </div>
             <div class="col-sm-5 mb-5">
               <h5>QR Code Integration</h5>
@@ -137,7 +137,7 @@
               <p>Callers would be able to see their location on an interactive floorplan to help with taking instructions from the dispatchers.</p>
             </div>
             <div class="col-sm-5 mb-5">
-              <img src="../assets/3D_Emergency/Phone_View_Map.gif" style="width:80%" alt="Interactive floorplan demo">
+              <img src="../assets/3D_Emergency/Phone_View_Map.gif" class="image-width-eighty" alt="Interactive floorplan demo">
             </div>
           </div>
 
@@ -147,7 +147,7 @@
               <p>Dispatchers would also be able to see where a caller is on an interactive floorplan. In addition, they would be presented with more information than the caller, such as where first responders should enter a building. This information could be passed down the workflow to be presented to the first responders themselves.</p>
             </div>
             <div class="col-md-10 col-sm-12">
-              <img src="../assets/3D_Emergency/Dispatch_View_Map.gif" class="float-right" style="width:100%;" alt="Dispatcher map demo gif">
+              <img src="../assets/3D_Emergency/Dispatch_View_Map.gif" class="float-right image-width-hundo" alt="Dispatcher map demo gif">
             </div>
           </div>
 
@@ -194,10 +194,10 @@
 
           <div class="row justify-content-center">
             <div class="col-lg-5 mb-5">
-              <img src="../assets/3D_Emergency/Mid_all_scan_sketch.jpg" class="float-right" style="width:100%" alt="Detailed sketch of call screen">
+              <img src="../assets/3D_Emergency/Mid_all_scan_sketch.jpg" class="float-right image-width-hundo" alt="Detailed sketch of call screen">
             </div>
             <div class="col-lg-5 mb-5">
-              <img src="../assets/3D_Emergency/Sketches_from_in_class_pitch.jpg" style="width:100%" alt="Detailed sketch of usage demo">
+              <img src="../assets/3D_Emergency/Sketches_from_in_class_pitch.jpg" class="image-width-hundo" alt="Detailed sketch of usage demo">
             </div>
           </div>
 
@@ -209,7 +209,7 @@
 
           <div class="row justify-content-center align-items-center">
             <div class="col-md-7 col-sm-12 mb-5">
-              <img src="../assets/3D_Emergency/Personas_1.png" class="float-right" style="width:100%;" alt="Persona 1">
+              <img src="../assets/3D_Emergency/Personas_1.png" class="float-right image-width-hundo" alt="Persona 1">
             </div>
             <div class="col-md-3 col-sm-12 mb-5">
               <h5>Primary Persona</h5>
@@ -223,7 +223,7 @@
               <p>Vince is 911 dispatcher in a large American city. He frequently needs to find out where a caller is inside of large buildings.</p>
             </div>
             <div class="col-md-7 col-sm-12 mb-5">
-              <img src="../assets/3D_Emergency/Personas_4.png" style="width:80%" alt="Persona 2">
+              <img src="../assets/3D_Emergency/Personas_4.png" class="image-width-eighty" alt="Persona 2">
             </div>
           </div>
 
@@ -234,16 +234,16 @@
           </div>
           <div class="row justify-content-center">
             <div class="col-md-5 col-sm-12">
-              <img src="../assets/3D_Emergency/Slide10.PNG" style="width:100%" alt="Feature analysis 1">
+              <img src="../assets/3D_Emergency/Slide10.PNG" class="image-width-hundo" alt="Feature analysis 1">
             </div>
             <div class="col-md-5 col-sm-12">
-              <img src="../assets/3D_Emergency/Slide11.PNG" style="width:100%" alt="Feature analysis 2">
+              <img src="../assets/3D_Emergency/Slide11.PNG" class="image-width-hundo" alt="Feature analysis 2">
             </div>
             <div class="col-md-5 col-sm-12 mb-5">
-              <img src="../assets/3D_Emergency/Slide12.PNG" style="width:100%" alt="Feature analysis 3">
+              <img src="../assets/3D_Emergency/Slide12.PNG" class="image-width-hundo" alt="Feature analysis 3">
             </div>
             <div class="col-md-5 col-sm-12 mb-5">
-              <img src="../assets/3D_Emergency/Slide13.PNG" style="width:100%" alt="Feature analysis">
+              <img src="../assets/3D_Emergency/Slide13.PNG" class="image-width-hundo" alt="Feature analysis">
             </div>
           </div>
           <div class="row justify-content-center">
