--- a/projects/Great_Lakes_Legends.html
+++ b/projects/Great_Lakes_Legends.html
@@ -43,13 +43,13 @@
         <a href="../About.html">ABOUT</a>
         <a href="../index.html">WORK</a>
         <a href="javascript:void(0);" aria-label="Hamburger menu" class="icon" onclick="navBarHandling()">
-          <i class="fa fa-bars" style="color:#313131;"></i>
+          <i class="fa fa-bars"></i>
         </a>
       </div>
     </div>
 
     <main role="main">
-      <div style="position: relative; height: 57.5px;"></div>
+      <div class="div-buffer-help"></div>
       <div class="jumbotron project-jumbotron d-flex align-items-center">
         <div class = "container">
           <div class="row justify-content-center">
@@ -57,9 +57,9 @@
               <h1>Great Lakes Legends</h1>
               <p>A group project to inspire local engagement with the Great Lakes Region.</p>
               <p>
-                <span style="color: #673AB7; font-weight: 500;">Role:</span> Product Designer<br>
-                <span style="color: #673AB7; font-weight: 500;">Techniques:</span> Brainstorming, Iterative Prototyping<br>
-                <span style="color: #673AB7; font-weight: 500;">Timeframe:</span> 4-hour Workshop
+                <span class="copy-emphasis">Role:</span> Product Designer<br>
+                <span class="copy-emphasis">Techniques:</span> Brainstorming, Iterative Prototyping<br>
+                <span class="copy-emphasis">Timeframe:</span> 4-hour Workshop
               </p>
             </div>
           </div>
@@ -95,10 +95,10 @@
       </div>
       <div class="row justify-content-center align-items-center">
         <div class="col-lg-5 col-sm-12">
-          <p>My group and I prototyped a tool that uses augmented reality to encourage people to witness the beautiful Great Lakes landscapes for themselves. We wanted to create a way for users to experience the stories the Library can tell and provide a way for them to add on their own personal stories for others. At the end of the Design Jam the <span style="color: #673AB7; font-weight: 500;">stakeholders voted our prototype the winner!</span></p>
+          <p>My group and I prototyped a tool that uses augmented reality to encourage people to witness the beautiful Great Lakes landscapes for themselves. We wanted to create a way for users to experience the stories the Library can tell and provide a way for them to add on their own personal stories for others. At the end of the Design Jam the <span class="copy-emphasis">stakeholders voted our prototype the winner!</span></p>
         </div>
         <div class="col-lg-5 col-sm-12">
-          <img src="../assets/Great_Lakes_Legends/group_photo.jpg" style="width: 100%" alt="Workshop group photo">
+          <img src="../assets/Great_Lakes_Legends/group_photo.jpg" class="image-width-hundo" alt="Workshop group photo">
         </div>
       </div>
 
@@ -122,7 +122,7 @@
           </p>
         </div>
         <div class="col-md-5 col-sm-12 mb-5">
-          <img src="../assets/Great_Lakes_Legends/hmw.jpg" style="width: 100%" alt="How might we questions">
+          <img src="../assets/Great_Lakes_Legends/hmw.jpg" class="image-width-hundo" alt="How might we questions">
         </div>
       </div>
       <div class="row justify-content-center">
@@ -134,10 +134,10 @@
       </div>
       <div class="row justify-content-center">
         <div class="col-lg-5 col-sm-6 col-xs-12 mb-5">
-          <img src="../assets/Great_Lakes_Legends/hmw_winner.jpg" style="width: 100%" alt="The how might we question we chose">
+          <img src="../assets/Great_Lakes_Legends/hmw_winner.jpg" class="image-width-hundo" alt="The how might we question we chose">
         </div>
         <div class="col-lg-5 col-sm-6 col-xs-12 mb-5">
-          <img src="../assets/Great_Lakes_Legends/idea_groupings.jpg" style="width: 100%" alt="Grouping the sticky notes of ideas together">
+          <img src="../assets/Great_Lakes_Legends/idea_groupings.jpg" class="image-width-hundo" alt="Grouping the sticky notes of ideas together">
         </div>
       </div>
       <div class="row justify-content-center">
@@ -149,10 +149,10 @@
       </div>
       <div class="row justify-content-center">
         <div class="col-lg-5 col-sm-12">
-          <img src="../assets/Great_Lakes_Legends/initial_wireframes.jpg" style="width: 100%" alt="Our initial wireframes">
+          <img src="../assets/Great_Lakes_Legends/initial_wireframes.jpg" class="image-width-hundo" alt="Our initial wireframes">
         </div>
         <div class="col-lg-5 col-sm-12">
-          <img src="../assets/Great_Lakes_Legends/final_wireframes.jpg" style="width: 100%" alt="Our final wireframes">
+          <img src="../assets/Great_Lakes_Legends/final_wireframes.jpg" class="image-width-hundo" alt="Our final wireframes">
         </div>
       </div>
 
@@ -175,7 +175,7 @@
           </p>
         </div>
         <div class="col-md-5 col-sm-12 mb-5">
-          <img src="../assets/Great_Lakes_Legends/final_prototype.jpg" style="width: 100%" alt="Our final prototype">
+          <img src="../assets/Great_Lakes_Legends/final_prototype.jpg" class="image-width-hundo" alt="Our final prototype">
         </div>
       </div>
       <div class="row justify-content-center">
@@ -198,7 +198,7 @@
           </p>
         </div>
         <div class="col-lg-5 col-sm-12">
-          <img src="../assets/Great_Lakes_Legends/reflection_landscape.jpg" style="width: 100%" alt="Picture of the Great Lakes shore line">
+          <img src="../assets/Great_Lakes_Legends/reflection_landscape.jpg" class="image-width-hundo" alt="Picture of the Great Lakes shore line">
         </div>
       </div>
 
