--- a/About.html
+++ b/About.html
@@ -39,16 +39,16 @@
         <a href="About.html" class="active">ABOUT</a>
         <a href="index.html">WORK</a>
         <a href="javascript:void(0);" aria-label="Hamburger menu" class="icon" onclick="navBarHandling()">
-          <i class="fa fa-bars" style="color:#313131;"></i>
+          <i class="fa fa-bars"></i>
         </a>
       </div>
     </div>
 
     <main role="main">
-      <div class = "container" style = "margin-top:100px">
+      <div class = "container about-me-margin">
         <div class = "row">
           <div class = "col-sm-6">
-            <p>Hi, I’m <span style="color: #673AB7; font-weight: 500;">Jackson</span>, a designer who cares about <span style="color: #673AB7; font-weight: 500;">the environment</span>, <span style="color: #673AB7; font-weight: 500;">privacy</span>, and <span style="color: #673AB7; font-weight: 500;">which book to read next.</span></p>
+            <p>Hi, I’m <span class="copy-emphasis">Jackson</span>, a designer who cares about <span class="copy-emphasis">the environment</span>, <span class="copy-emphasis">privacy</span>, and <span class="copy-emphasis">which book to read next.</span></p>
             <p>I’m currently working on my master’s in UX Research and Design at the University of Michigan's School of Information and searching for internships. I believe UX design is a way I can satisfy my desire to create beautiful things, make a positive impact on the world, and build experiences that bring people joy.</p>
 
             <p>Data visualization fascinates me, and you can often find me browsing <a href = "https://www.reddit.com/r/dataisbeautiful" target="_blank">r/dataisbeautiful</a>. I’m hoping to combine the design principles I’m learning with my technical background to find innovative ways to present complicated data to people.</p>
@@ -57,7 +57,7 @@
 
           </div>
           <div class = "col-sm-6">
-            <img src = "assets/Picture_of_me.jpg" style = "width:80%" alt="Portrait of myself">
+            <img src = "assets/Picture_of_me.jpg" class="image-width-eighty" alt="Portrait of myself">
           </div>
         </div>
       </div>
