--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <a href="About.html">ABOUT</a>
         <a href="index.html" class="active">WORK</a>
         <a href="javascript:void(0);" aria-label="Hamburger menu" class="icon" onclick="navBarHandling()">
-          <i class="fa fa-bars" style="color:#313131;"></i>
+          <i class="fa fa-bars"></i>
         </a>
       </div>
     </div>
@@ -48,9 +48,9 @@
       <div class = "jumbotron jumbotron-fluid d-flex align-items-center" id = "mainJumbotron">
         <div class = "container">
           <div class="col-sm-12" >
-            <h1> <span style="color: #313131;">Hi there!</span></h1>
-            <h1><a href="About.html" style="color: #313131;">I'm Jackson.</a></h1>
-            <p><span style="color: #673AB7; font-weight: 500;">Digital product designer</span> from Ann Arbor. <br>I want to create better experiences <span style="color: #673AB7; font-weight: 500;">for people.</span></p>
+            <h1> <span class="hero-text" >Hi there!</span></h1>
+            <h1><a href="About.html" class="hero-text">I'm Jackson.</a></h1>
+            <p><span class="copy-emphasis">Digital product designer</span> from Ann Arbor. <br>I want to create better experiences <span class="copy-emphasis">for people.</span></p>
           </div>
         </div>
       </div>
