Added 622 project back in

--- a/index.html
+++ b/index.html
@@ -80,6 +80,17 @@
               </a>
             </div>
           </div>
+          <div class = "col-lg-4 col-md-6 col-sm-12">
+            <div class = "thumbnail project-card mx-auto">
+              <a href = "projects/Autodesk_Consulting.html">
+                <img src = "assets/Autodesk_Consulting/Autodesk_logo_dark.jpg" alt="Autodesk Consulting" class = "project-image">
+                <div class = "caption">
+                  <p class="project-name">Great Lakes Legends</p>
+                  <p class="project-type">Product Design</p>
+                </div>
+              </a>
+            </div>
+          </div>
         </div>
       </div>
 
